# golf

./: .gitignore  CMakeLists.txt  README.md  gaspi.code-workspace  gen_machine_file.sh  gen_machine_local.sh  kraken_debug.cmd
results/: README.md
run/: .benchmark.cpp.swp  CMakeLists.txt  benchmark.cpp  benchmark.f90  benchmarkBroadcast.cpp  benchmarkMPI.cpp  fortran_gaspi.f90  fortran_wrap.cpp  simplering.cpp
